# itmo-4sem-tt

./: tt.cabal
src/: Common.hs  ExtendedLambda.hs  LambdaParser.hs  LambdaTypes.hs  Main.hs  SKI.hs  SimpleTypedLambda.hs  Unification.hs  UntypedLambda.hs
src/ExtendedLambda/: AlgorithmW.hs  Base.hs  Normalization.hs  Normaliztion.hs  Types.hs
src/ExtendedLambda/Thunk/: Base.hs  Normalization.hs  ST.hs  State.hs
test/: 1.txt  12_fib.txt  3.txt  4.txt  5.txt  6.txt  abc.txt  cnt2.txt  cnt2_2.txt  fibslow.in  fibslowsk.in  list.txt
