name:                tt
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              georgeee
maintainer:          george.agapov@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable tt
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.7,
                       array >= 0.5,
                       parsec >= 3.1,
                       vector >= 0.10
                       -- hs-source-dirs:      
  default-language:    Haskell2010
