name:                tt
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              georgeee
maintainer:          george.agapov@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable tt
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.7,
                       parsec >= 3.1,
                       unordered-containers >= 0.2.6,
                       hashable >= 1.2,
                       mtl >= 2.2,
                       either >= 4.4,
                       transformers >= 0.4.2.0,
                       linkedhashmap >= 0.4,
                       STMonadTrans>=0.3.3
                       -- hs-source-dirs:      
  default-language:    Haskell2010
